--- a/BarCodePrint/BarCodePrint.csproj
+++ b/BarCodePrint/BarCodePrint.csproj
@@ -52,6 +52,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="NewSurvey.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="NewSurvey.Designer.cs">
+      <DependentUpon>NewSurvey.cs</DependentUpon>
+    </Compile>
     <Compile Include="lab.cs" />
     <Compile Include="main.cs">
       <SubType>Form</SubType>
@@ -62,6 +68,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="NewSurvey.resx">
+      <DependentUpon>NewSurvey.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="main.resx">
       <DependentUpon>main.cs</DependentUpon>
     </EmbeddedResource>
