--- a/BarCodePrint/BarCodePrint.csproj
+++ b/BarCodePrint/BarCodePrint.csproj
@@ -50,8 +50,10 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="clActivePrinter.cs" />
     <Compile Include="clTask.cs" />
     <Compile Include="NewSurvey.cs">
       <SubType>Form</SubType>
